* BUG#6879 Changed default address format for France

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* FEA#0000 Manage Corsica

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation