@@ -1,3 +1,4 @@
+* BUG#7335 La recherche de code postal est faite avec la ligne 5 lorsqu'un tel code postal existe, sinon elle est faite avec un code postal ne possédant pas de ligne 5, sinon avec un code postal possédant une autre ligne 5
 * BUG#6879 Modification du format d'adresse par défaut pour la France
 
 Version 1.12 - 2017-04-28
