@@ -1,3 +1,4 @@
+* BUG#7335 Zip code matching is done with the line 5 if such a zip code exists, else it is done with a zip code with no line 5, else it is done with a zip code having any other line 5
 * BUG#6879 Changed default address format for France
 
 Version 1.12 - 2017-04-28
